# tensorflow_node

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  draw_max_activation.py  experiment_stream_input.py  manual_1_sensible_ae.py  manual_2.py  manual_2_tensorboard.py  manual_3_multiple_ae.py  manual_4_stream_input.py  manual_5_mnist_stream_validation.py  manual_6_hand_hires.py  manual_6_profiling.py  manual_7_transform_test.py  manual_tensorboard.py  new-architecture-test.py  other_approach.py  package.xml  setup.py
code/: __init__.py  stacked_autoencoder.py
code/input/: inputlayer.py  opencv.py
code/utils/: logger.py  summary_writer.py  tensorboard.py
config/: infogan-test.yaml  single-gan.yaml  single-infogan.yaml  small-ae-destin.yaml  stacked-infogan.yaml
data/: .gitignore  make-mnist-movie.py
destin/: __init__.py
destin/input/: __init__.py  inputlayer.py  opencv.py
destin/nodes/: __init__.py  autoencoder.py  node.py  stacked_autoencoder.py
destin/tests/: test_autoencoder.py  test_inputlayer.py  test_stacked_autoencoder.py
destin/utils/: summary_writer.py  tensorboard.py
experiments/: small_destin.py  stacked_bottom_small_destin.py
implementation/: run.py
implementation/autoencoder/: autoencoder.py
implementation/destin/: destin.py
implementation/utilities/: flags.py  start_tensorboard.py
inputlayer/: __init__.py  inputlayer.py  opencv.py
launch/: mnist.launch  rosinputlayer.launch
model/: __init__.py  stacked_autoencoder.py  summary_writer.py  utils.py
msg/: DestinNodeState.msg  DestinStatus.msg  TFNodeState.msg  TFStatus.msg
scripts/: daemon  tensorboard
src/: daemon.py
src/destin/: __init__.py
src/destin/architectures/: __init__.py  architecture.py  destin_arch.py  handcoded_destin.py
src/destin/input/: __init__.py  inputlayer.py  opencv.py  ros.py
src/destin/nodes/: autoencoder.py  stacked_autoencoder.py
src/destin/tests/: test_inputlayer.py
src/destin/utils/: summary_writer.py
src/tensorflow_node/: __init__.py
src/tensorflow_node/architectures/: __init__.py  architecture.py  destin.py  handcoded_destin.py  infogan.py  single_gan.py  single_infogan.py  stacked_infogan.py
src/tensorflow_node/input/: inputlayer.py  opencv.py  ros.py
src/tensorflow_node/nodes/: __init__.py  autoencoder.py  gan.py  node.py  regularized_gan.py  stacked_autoencoder.py
src/tensorflow_node/tests/: test_autoencoder.py  test_inputlayer.py  test_stacked_autoencoder.py
src/tensorflow_node/utils/: __init__.py  summary_writer.py  tensorboard.py
tests/: big-destin.py  big_destin.py  bigdestin.py  callbacks.py  destin-test.py  inputlayer.py  mnist.py  multilayer.py  profile.py  profiling.py  single_ae.py  small_destin.py  stream_input.py  test_1.py  test_destin.py
